# email-validate-hs

./: email-validate.cabal
src/Text/Domain/: Parser.hs
src/Text/Email/: Parser.hs  Validate.hs
src/Text/Email/Header/: Grammar.hs
tests/: Main.hs
