name:           email-validate
version:        2.1.1
license:        BSD3
license-file:   LICENSE
author:         George Pollard <porges@porg.es>
maintainer:     George Pollard <porges@porg.es>
homepage:       http://porg.es/blog/email-address-validation-simpler-faster-more-correct
category:       Text
synopsis:       Validating an email address string against RFC 5321 and 5322. 6532 supported.
description:    Validating an email address string against RFC 5321 and 5322. 6532 supported.
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10

source-repository head
    type: git
    location: git://github.com/Porges/email-validate-hs.git

source-repository this
    type: git
    location: git://github.com/Porges/email-validate-hs.git
    tag: v2.1.1

library
    build-depends:
        base >= 4 && < 5,
        attoparsec >= 0.10.0,
        text >= 0.11.1.5
    default-language: Haskell2010
    default-extensions: DeriveGeneric, DeriveDataTypeable, OverloadedStrings
    hs-source-dirs: src
    exposed-modules:
        Text.Email.Validate,
        Text.Email.Parser,
        Text.Email.Header.Grammar,
        Text.Domain.Parser

Test-Suite Main
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: tests
    x-uses-tf: true
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:
        base >= 4 && < 5,
        HUnit >= 1.2 && < 2,
        email-validate,
        QuickCheck >= 2.4,
        test-framework >= 0.4.1,
        test-framework-quickcheck2,
        test-framework-hunit,
        text >= 0.11.1.5
